# infinite-turtles

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/turtles/: .rosinstall  local_setup.sh  setup.sh
devel/.private/turtles/include/turtles/: Turtle.h
devel/.private/turtles/lib/pkgconfig/: turtles.pc
devel/.private/turtles/lib/turtles/: subscriber
devel/include/turtles/: Turtle.h
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  turtles.pc
devel/lib/python2.7/dist-packages/turtles/: __init__.py
devel/lib/turtles/: subscriber
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/gennodejs/ros/turtles/: _index.js
devel/share/gennodejs/ros/turtles/msg/: Turtle.js  (+1 more)
devel/share/roseus/ros/turtles/: manifest.l
devel/share/turtles/cmake/: turtles-msg-extras.cmake  turtles-msg-paths.cmake  turtlesConfig-version.cmake  turtlesConfig.cmake
logs/turtles/: build.check.006.log.stderr  build.check.007.log.stderr  build.check.008.log.stderr  build.check.020.log.stderr  build.make.015.log.stderr
src/turtles/: CMakeLists.txt  package.xml
src/turtles/launch/: turtle_stream.launch
src/turtles/msg/: Turtle.msg
src/turtles/scripts/: publisher.py
src/turtles/src/: subscriber.cpp
(+21 files in other folders)
